Linux用リリーススクリプトを修正

--- a/LinuxDesktop/Guitar.desktop
+++ b/LinuxDesktop/Guitar.desktop
@@ -2,5 +2,5 @@
 Type=Application
 Name=Guitar
 Exec=/opt/Guitar/Guitar
-Icon=/opt/Guitar/Guitar.svg
+Icon=/opt/Guitar/LinuxDesktop/Guitar.svg
 Terminal=false
