Added russian translation - can not make it work)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -350,6 +350,7 @@ set(Guitar_RESOURCES
 
 set(Guitar_TRANSLATIONS
 	src/resources/translations/Guitar_ja.ts
+	src/resources/translations/Guitar_ru.ts
     )
 
 qt5_add_translation(Guitar_QM_FILES ${Guitar_TRANSLATIONS})
