modify: cmake chg. to library-generate-link-system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,10 @@ elseif(UNIX)
 	list(REMOVE_ITEM Guitar_HEADERS ${win32_src})
 endif()
 
-file(GLOB_RECURSE Guitar_UIS  ./*.ui) 
+# main.cppは別個にコンパイルしたいのでリストから除外
+list(REMOVE_ITEM Guitar_SOURCES main.cpp)
+
+file(GLOB_RECURSE Guitar_UIS  ./*.ui)
 
 file(GLOB_RECURSE Guitar_RESOURCES   ./resources/*.qrc)
 
@@ -26,25 +29,35 @@ qt5_add_translation(Guitar_QM_FILES ${Guitar_TRANSLATIONS})
 configure_file(${Guitar_RESOURCES} ${CMAKE_BINARY_DIR} COPYONLY)
 
 add_custom_target(translations ALL DEPENDS ${Guitar_QM_FILES})
-
 add_custom_target(resources ALL DEPENDS ${Guitar_RESOURCES})
-
 add_dependencies(resources translations)
 
-include_directories(${CMAKE_BINARY_DIR})
-include_directories(./texteditor)
-add_executable(${PROJECT_NAME}
-	${Guitar_SOURCES}
-	${Guitar_HEADERS}
-	${Guitar_UIS}
-	${Guitar_RESOURCES}
-	${Guitar_QM_FILES}
-)
-
-target_link_libraries(${PROJECT_NAME}
+# Sourceをライブラリとして構築する
+add_library(guitar-lib ${Guitar_SOURCES})
+target_link_libraries(guitar-lib PUBLIC
 	Qt5::Widgets
 	Qt5::Network
 	Qt5::Svg
-	zlib
-	OpenSSL::SSL OpenSSL::Crypto
+	zlib 
+	OpenSSL::SSL
+	OpenSSL::Crypto
 	)
+
+
+# ライブラリに読み込むHeaderの設定
+target_include_directories(guitar-lib PUBLIC ${CMAKE_BINARY_DIR})
+target_include_directories(guitar-lib PUBLIC ${PROJECT_SOURCE_DIR}/src)
+target_include_directories(guitar-lib PUBLIC ${PROJECT_SOURCE_DIR}/src/texteditor)
+
+set_target_properties(guitar-lib PROPERTIES OUTPUT_NAME guitar)
+
+# main.cppのコンパイル
+add_executable(${PROJECT_NAME} 
+		main.cpp
+		${Guitar_RESOURCES}
+		${Guitar_QM_FILES}
+		${Guitar_UIS}
+		)
+
+# main.cppとそれ以外をリンク
+target_link_libraries(${PROJECT_NAME} guitar-lib)
