fix build script

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ packaging/mac/Guitar.app/Contents/Frameworks/QtCore.framework/QtCore
 packaging/mac/*.zip
 packaging/mac/Guitar-macos.zip
 docs/src_docs/
+packaging/deb/Guitar
