--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: cpp
 compiler: gcc
 sudo: require
-dist: trusty
+dist: focal
 
 before_install:
   - sudo add-apt-repository ppa:beineri/opt-qt-5.14.2-focal -y
-  - sudo apt-get update -qq
+  - sudo apt-get update -q
 
 install:
   - sudo apt-get -y install qt514base qt514svg libgl1-mesa-dev libssl-dev zlib1g-dev ruby
