--- a/packaging/appimage/Makefile
+++ b/packaging/appimage/Makefile
@@ -31,3 +31,7 @@ build:
 archlinux:
 	sudo pacman -S --noconfirm base-devel double-conversion libb2 ruby
 	sudo pacman -S --noconfirm libxcb libxkbcommon-x11 xcb-util-cursor xcb-util-wm xcb-util-keysyms libsm libjpeg-turbo libdrm mtdev tslib libinput libx11 libglvnd libpng harfbuzz md4c freetype2 fontconfig fuse2
+
+ubuntu:
+	sudo apt install -y ruby libmagic-dev libssl-dev
+	sudo apt install -y libfontconfig1-dev libfreetype6-dev libx11-dev libx11-xcb-dev libxext-dev libxfixes-dev libxi-dev libxrender-dev libxcb1-dev libxcb-cursor-dev libxcb-glx0-dev libxcb-keysyms1-dev libxcb-image0-dev libxcb-shm0-dev libxcb-icccm4-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-shape0-dev libxcb-randr0-dev libxcb-render-util0-dev libxcb-util-dev libxcb-xinerama0-dev libxcb-xkb-dev libxkbcommon-dev libxkbcommon-x11-dev
