--- a/filetype/filetype.vcxproj
+++ b/filetype/filetype.vcxproj
@@ -29,26 +29,26 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -92,7 +92,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;HAVE_CONFIG_H=1;PCRE2_CODE_UNIT_WIDTH=8</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>pcre2/src;misc;dirent/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>pcre2/src;misc;misc/win32;dirent/include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>unistd.h</ForcedIncludeFiles>
       <DisableSpecificWarnings>4996;4703</DisableSpecificWarnings>
     </ClCompile>
@@ -109,7 +109,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;HAVE_CONFIG_H=1;PCRE2_CODE_UNIT_WIDTH=8</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>pcre2/src;misc;dirent/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>pcre2/src;misc;misc/win32;dirent/include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>unistd.h</ForcedIncludeFiles>
       <DisableSpecificWarnings>4996;4703</DisableSpecificWarnings>
     </ClCompile>
@@ -126,7 +126,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;HAVE_CONFIG_H=1;PCRE2_CODE_UNIT_WIDTH=8</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>pcre2/src;misc;dirent/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>pcre2/src;misc;misc/win32;dirent/include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>unistd.h</ForcedIncludeFiles>
       <DisableSpecificWarnings>4996;4703</DisableSpecificWarnings>
     </ClCompile>
@@ -143,7 +143,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;HAVE_CONFIG_H=1;PCRE2_CODE_UNIT_WIDTH=8</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>pcre2/src;misc;dirent/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>pcre2/src;misc;misc/win32;dirent/include</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>unistd.h</ForcedIncludeFiles>
       <DisableSpecificWarnings>4996;4703</DisableSpecificWarnings>
     </ClCompile>
