update doxygen script

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ Guitar-*.AppImage
 filetype2/docker/libmagic.so
 filetype2/docker/magic.mgc
 filetype2/file/magic/Magdir/varied.out
+guitar-doxy-html.tar.zst
