--- a/docker/DockerBuildFiles/Dockerfile
+++ b/docker/DockerBuildFiles/Dockerfile
@@ -33,6 +33,7 @@ COPY ./environment /etc/
 
 RUN apt install -y file qtbase5-dev libqt5svg5-dev libssl-dev fuse
 RUN apt install -y automake autoconf shtool libtool
+RUN apt install -y doxygen graphviz
 
 COPY ./cmd /tmp/
 CMD ["/bin/sh", "/tmp/cmd"]
