--- a/doxy/Doxy.conf
+++ b/doxy/Doxy.conf
@@ -1,6 +1,6 @@
 PROJECT_NAME = "Guitar"
 
-OUTPUT_DIRECTORY = ./docs/src_docs
+OUTPUT_DIRECTORY = .
 EXTRACT_ALL = yes
 EXTRACT_PRIVATE = yes
 EXTRACT_STATIC = yes
@@ -10,7 +10,7 @@ CLASS_DIAGRAMS = yes
 CALL_GRAPH = yes
 
 RECURSIVE = yes
-INPUT = ./src
+INPUT = ../src
 #common formats like .c/.cc/.cxx/.c++/.cpp/.inl/.h/.hpp
 #FILE_PATTERNS = .c .h
 RECURSIVE = yes
