Replace QT5 with QT6 dependencies in Dockerfile

--- a/docker/scripts/Makefile
+++ b/docker/scripts/Makefile
@@ -4,7 +4,7 @@ build:
 	cd /Guitar ; ruby prepare.rb
 	rm -fr _build
 	mkdir _build
-	cd _build ; qmake "CONFIG+=release" /Guitar/Guitar.pri ; make -j8
+	cd _build ; qmake6 "CONFIG+=release" /Guitar/Guitar.pri ; make -j8
 
 deb: build
 	ruby make-deb.rb
