--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -1,11 +1,13 @@
 name: AppImage
 
 on:
+  schedule:
+    - cron: "0 20 * * *"
   workflow_dispatch:
 
 jobs:
   build-appimage:
-    runs-on: ubuntu-20.04  # Use older Ubuntu for better compatibility
+    runs-on: ubuntu-24.04
     
     steps:
     - name: Checkout code
